[project]
name = "KubSU"
version = "0.1.0"
requires-python = ">=3.10.2"
dependencies = [
    "fastapi==0.115.8",
    "uvicorn==0.34.0",
    "sqlalchemy==2.0.37",
    "psycopg-binary==3.2.4",
    "psycopg==3.2.4"
]

[project.optional-dependencies]
test = [
    "pytest>=6.2.5",
    "pytest-asyncio==0.25.3",
    "httpx==0.28.1"
]

[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta:__legacy__"
